--- a/index.css
+++ b/index.css
@@ -1,35 +1,65 @@
 .header {
     width: 100%;
     height: 80px;
-    background: #D8D8D8;
+    background: #faf5f5;
 }
 
 .main-section {
     width: 100%;
     height: 800px;
-    background: #b3a7a7;
+    background: #c0b7b7;
 }
 
 .footer {
     clear: both;
     width: 100%;
     height: 61px;
-    background: #e6e3e3;
+    background: #bdb8b8;
     bottom: 0px;
 
 }
+#logoimg{
 
-.logo-container {
-    background: #4F4949;
-    width: 2.3em;
-    height: 40px;
+    width: 5em;
+    height: 80px;
     float: left;
-
 }
+#logouser{
 
-.menu-container {
-    background: #4F4949;
-    width: 28%;
-    height: 40px;
+    width: 5em;
+    height: 80px;
     float: right;
 }
+.logo-container {
+
+    background: #4F4949;
+    width: 5em;
+    height: 80px;
+    float: left;
+  
+
+}
+.menu-container {
+
+    background: #f1f0f0;
+    width: 80%;
+    height: 40px;
+    float: right;
+    padding-right: 20px;
+}
+.url {
+    color: antiquewhite;
+    text-align: center;
+}
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  a:hover, a:active {
+    background-color: red;
+  }
