--- a/index.css
+++ b/index.css
@@ -7,17 +7,7 @@
 .main-section {
     width: 100%;
     height: 900px;
-    background: #D8D8D8;
-}
 
-.footer {
-    clear: both;
-    width: 100%;
-    height: 40px;
-    background: #b9aaaa;
-    bottom: 0px;
-    text-align: center;
-  
 }
 
 #logoimg {
@@ -79,9 +69,10 @@ a:active {
 .content {
     background: #fcfbfb;
     padding: 20px 20px 20px 20px;
-    width: 70%;
-    height: 300px;
+    width: 100%;
+    height: 500px;
     text-align: center;
+    
   }
 
   table {
@@ -98,4 +89,27 @@ a:active {
   
   tr:nth-child(even) {
     background-color: #dddddd;
+  }
+
+  .button {
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+  .iconupdate{
+    width: 3em;
+    height: 10px;
+  }
+
+  .icondelete{
+    width: 3em;
+    height: 10px;
   }
