--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 .main-section {
     width: 100%;
     height: 900px;
-   
+
 }
 
 #logoimg {
@@ -72,26 +72,27 @@ a:active {
     width: 100%;
     height: 500px;
     text-align: center;
-    
-  }
 
-  table {
+}
+
+table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-  }
-  
-  td, th {
+}
+
+td,
+th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+}
 
-  .button {
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+.button {
     background-color: #04AA6D;
     border: none;
     color: white;
@@ -102,19 +103,20 @@ a:active {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-  }
+}
 
-  .iconupdate{
+.iconupdate {
     width: 3em;
     height: 10px;
-  }
+}
 
-  .icondelete{
+.icondelete {
     width: 3em;
     height: 10px;
-  }
+}
 
-  input[type=text], select {
+input[type=text],
+select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -122,9 +124,9 @@ a:active {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
-  
-  input[type=submit] {
+}
+
+input[type=submit] {
     width: 100%;
     background-color: #4CAF50;
     color: white;
@@ -133,29 +135,42 @@ a:active {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
-  
-  input[type=submit]:hover {
+}
+
+input[type=submit]:hover {
     background-color: #45a049;
-  }
-  
-  div {
+}
+
+div {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-  }
+}
 
-  .h3{
+.h3 {
     color: #f44336;
-  }
+}
 
-  ul li {
+ul li {
     background: #eee;
     color: #333;
     height: 40px;
     border-radius: 50px;
     list-style-type: none;
-    font-size: 30px;
-   background-color: #f0e3e2;
-  }
- 
+    font-size: 20px;
+    background-color: #f0e3e2;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+ul .fa-check{
+    right: 40px;
+    color: green;
+    position: absolute;
+}
+
+ul .fa-trash{
+    right: 15px;
+    color: #ff0033;
+    position: absolute;
+}
